--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link rel='stylesheet' href='/css/main-steve.css'/>
 
     <!-- ceci integre le css de matrial ki -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/material-kit.min.css">
