--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,10 @@
     <meta name="theme-color" content="#000000">
     <link rel='stylesheet' href='/css/main-steve.css'/>
 
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
     <!-- ceci integre le css de matrial ki -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/material-kit.min.css">
     <!--
